12/01 commit